Skip to content

codec: videotoolbox: output not fully flushed on IRAP

IRAP code path instead of regular bump created unwanted frame latency

 56  52(Nl3) 53(Nl0) 54(Nl1) 56(Nl6)
 57  53(Nl0) 54(Nl1) 55(Nl0) 56(Nl7)
 58  54(Nl1) 55(Nl0) 56(Nl7) 59(Nl0)
 59  55(Nl0) 56(Nl7) 57(Nl0) 59(Nl1)
 60  56(Nl7) 57(Nl0) 58(Nl0) 59(Nl2)
 61  0(Nl0) 56(Nl8) 57(Nl1) 58(Nl1) 59(Nl3)
 62  8(Nl0) 57(Nl2) 58(Nl2) 59(Nl4)
 63  4(Nl0) 57(Nl3) 58(Nl3) 59(Nl5)
 64  2(Nl0) 57(Nl4) 58(Nl4) 59(Nl6)
 65  1(Nl0) 57(Nl5) 58(Nl5) 59(Nl7)
 66  3(Nl0) 57(Nl6) 58(Nl6) 59(Nl8)
 67  6(Nl0) 57(Nl7) 58(Nl7) 59(Nl9)
 68  5(Nl0) 57(Nl8) 58(Nl8) 59(Nl10)
 69  7(Nl0) 57(Nl9) 58(Nl9) 59(Nl11)
 70  16(Nl0) 57(Nl10) 58(Nl10) 59(Nl12)
 71  12(Nl0) 57(Nl11) 58(Nl11) 59(Nl13)

instead of

 56  52(Nl3) 53(Nl0) 54(Nl1) 56(Nl6)
 57  53(Nl0) 54(Nl1) 55(Nl0) 56(Nl7)
 58  54(Nl1) 55(Nl0) 56(Nl7) 59(Nl0)
 59  55(Nl0) 56(Nl7) 57(Nl0) 59(Nl1)
 60  56(Nl7) 57(Nl0) 58(Nl0) 59(Nl2)
 61  0(Nl0)
 62  0(Nl0) 8(Nl0)
 63  0(Nl0) 4(Nl0) 8(Nl1)
 64  0(Nl0) 2(Nl0) 4(Nl1) 8(Nl2)
 65  1(Nl0) 2(Nl1) 4(Nl2) 8(Nl3)
 66  2(Nl1) 3(Nl0) 4(Nl3) 8(Nl4)
 67  3(Nl0) 4(Nl3) 6(Nl0) 8(Nl5)
 68  4(Nl3) 5(Nl0) 6(Nl1) 8(Nl6)
 69  5(Nl0) 6(Nl1) 7(Nl0) 8(Nl7)
 70  6(Nl1) 7(Nl0) 8(Nl7) 16(Nl0)
 71  7(Nl0) 8(Nl7) 12(Nl0) 16(Nl1)
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information