codec: videotoolbox: fix DPB output on IRAP

refs #28700